--- a/index.html
+++ b/index.html
@@ -1,20 +1,3 @@
-<!-- Please download all the media files and page's layout using the link: https://github.com/suraj122/AC-STYLE-checkpoint-4
-
-Figure out the responsive design for blog page.
-
-Chose "Raleway" font-family for the assignment.
-
-Using CSS resets is necessary.
-
-Use semantic tags and keep the nesting and indentation proper.
-
-Pay attention to the codes, your code quality matters a lot.
-
-Try to implement the layout as exactly as it has been provided in the design.
-
-Pay attention to minor things like spacing, alignment, size, etc.
-
-Once you are done with the assignment please schedule a call with the mentor for the assessment. -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -24,7 +7,7 @@ Once you are done with the assignment please schedule a call with the mentor for
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2bbf3cce3b.js" crossorigin="anonymous"></script>
-    <title>Flexor | Assignment - Checkpoint 4</title>
+    <title>Flexor</title>
 </head>
 <body>
     <header class="header padding-1">
