--- a/blog.html
+++ b/blog.html
@@ -169,9 +169,11 @@
         <section class="pagination-section">
             <div class="container">
                 <div class="page-number flex">
+                    <div><i class="fas fa-angle-left"></i></div>
                     <div>1</div>
                     <div class="active-button">2</div>
                     <div>3</div>
+                    <div><i class="fas fa-angle-right"></i></div>
                 </div>
             </div>
         </section>
