--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
             <div class="container flex-general flex-wrap">
                 <div class="about-image flex-40 align-self-center">
                     <img src="./media/about-img.jpg" alt="cafeteria"/>
+                    <div class="centered"><i class="far fa-play-circle"></i></div>
                 </div>
                 <article class="about-article flex-55 align-self-center">
                     <p class="about">About us</p>
