--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./styles/styles.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/2bbf3cce3b.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/85e97fc28e.js" crossorigin="anonymous"></script>
     <title>Flexor</title>
 </head>
 <body>
@@ -106,7 +106,11 @@
             <div class="container flex-general flex-wrap">
                 <div class="about-image flex-40 align-self-center">
                     <img src="./media/about-img.jpg" alt="cafeteria"/>
-                    <div class="centered"><i class="far fa-play-circle"></i></div>
+                    <div class="centered">
+                        <div class="center-logo1">
+                            <i class="fas fa-play-circle clr"></i>
+                        </div>
+                    </div>
                 </div>
                 <article class="about-article flex-55 align-self-center">
                     <p class="about">About us</p>
@@ -287,6 +291,11 @@
                         illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
                         <i class="fas fa-quote-right"></i>
                     </blockquote>
+                        <span class="dot"></span>
+                        <span class="dot"></span>
+                        <div class="clr dot"></div>
+                        <span class="dot"></span>
+                        <span class="dot"></span>
                 </article>
             </div>
         </section>
